--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename"> LYBINGOBA  </h1>
+        <h1 class="sitename"> LYBINGOBA yo </h1>
         <!-- <img src="./assets/img/WhatsApp Image 2024-10-06 à 19.45.59_f32fda1d.jpg" alt="" srcset="" width="200px" height="200px"> -->
       </a>
 
