--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - LYBINGOBA Bootstrap Template</title>
+  <title>LYBINGOBA</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -28,13 +28,6 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: LYBINGOBA
-  * Template URL: https://Future Vision ..com/LYBINGOBA-bootstrap-template/
-  * Updated: Aug 07 2024 with Bootstrap v5.3.3
-  * Author: Future Vision ..com
-  * License: https://Future Vision ..com/license/
-  ======================================================== -->
 </head>
 
 <body class="index-page">
